# StickyStick

./: .gitignore  CMakeLists.txt
include/: RegistryInit.hpp
include/Core/: Engine.hpp  Game.hpp  InputHandler.hpp  Registry.hpp  Window.hpp
include/GameObjects/: GameObject.hpp  Player.hpp
src/: RegistryInit.cpp  main.cpp
src/Core/: Engine.cpp  Game.cpp  InputHandler.cpp  Registry.cpp  Window.cpp
src/GameObjects/: Player.cpp
